# Desafios

./: README.md  sistema_bacario.py
Backend-FastAPI/: .gitignore  README.md  alembic.ini  postgres.yml  pyproject.toml
Backend-FastAPI-TDD/: Makefile  compose-mongo.yml  pyproject.toml
Backend-FastAPI-TDD/configs/: settings.py
Backend-FastAPI-TDD/configs/db/: mongo.py
Backend-FastAPI-TDD/src/: main.py
Backend-FastAPI-TDD/src/schemas/: base.py  products.py
Backend-FastAPI-TDD/tests/: conftest.py
Backend-FastAPI-TDD/tests/schemas/: test_products.py
Backend-FastAPI/alembic/: env.py
Backend-FastAPI/alembic/versions/: 14873971dc2d_teste_1_creat_at.py  1b9ed8f71577_fix_creat_at.py  9059656b3762_produtos.py  c62aeffdb832_teste_2_creat_at.py  c8bd408c4903_add_autoincremento.py  fac690981ca8_teste_3_creat_at.py
Backend-FastAPI/src/: main.py
Backend-FastAPI/src/db/: base.py
Backend-FastAPI/src/models/: produtos.py  usuario.py
Backend-FastAPI/src/routes/: usuario.py
Backend-FastAPI/src/schemas/: produtos.py
Backend-FastAPI/tests/: settings.py
Sistema_Bancário/: sistema_bancario(v2).py
curso_api/alembic/versions/: 3640d99f5b2b_correção_de_args_id.py  4d2d2e8b07c2_retirando_tipo_user.py  603ebc76ee72_retorno_creat_at.py  e0b446627458_retirando_unidade_de_medida_dos_produtos.py
curso_api/src/routes/: produtos.py
curso_api/src/schemas/: usuario.py
